# Nav2BTPlugin

./: IMPLEMENTATION.md  README.md  TODO.md
nav2_custom_bt_plugins/: CMakeLists.txt  custom_nav_tree.xml  design.md  package.xml  plugin.xml
nav2_custom_bt_plugins/behavior_trees/: custom_nav_tree.xml
nav2_custom_bt_plugins/include/nav2_custom_bt_plugins/: battery_monitor.hpp  crowd_stop.hpp  obstacle_slowdown.hpp  return_to_dock.hpp
nav2_custom_bt_plugins/src/: battery_monitor.cpp  crowd_stop.cpp  obstacle_slowdown.cpp  plugin_registration.cpp  register_nodes.cpp  return_to_dock.cpp
nav2_custom_bt_plugins/test/: test_plugins.cpp
nav2_params/: nav2_params.yaml
